7/16: XIV ads and Anilist link
Added silly fake ads for FFXIV created by bootlegdomain, updated about page with link to new Anilist account

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -128,11 +128,11 @@
               <tr>
                 <td valign="top">
                   <ul style="margin: 0;">
-                    <li><a href="https://myanimelist.net/profile/azayakana">anime & manga</a> (recently revived account)</li>
+                    <li><a href="https://anilist.co/user/bunflora/">anime & manga</a> (trying anilist!)</li>
                     <li><a href="https://app.thestorygraph.com/profile/wayfinders">books</a></li>
                     <li><a href="https://backloggd.com/u/momokupo/">video games</a></li>
                     <li><a href="https://boardgamegeek.com/collection/user/bunflora">board games</a></li>
-                    <li><a href="https://myfigurecollection.net/profile/aerina">figures</a> (also recently revived account)</li>
+                    <li><a href="https://myfigurecollection.net/profile/aerina">figures</a> (recently revived account)</li>
                     <li><a href="https://www.last.fm/user/eleventhcircle">music</a></li>
                   </ul>
                 </td>
