--- a/public/credits/index.html
+++ b/public/credits/index.html
@@ -96,6 +96,7 @@
           <li>floating bunny gif in the title bar from <a href="https://graphic.neocities.org/directory">Bonnibel's Graphic Collection</a></li>
           <li>carrot bunny on the guestbook from <a href="https://web.archive.org/web/20100612081035im_/http://neskaya.net/pixels/Bunny_Pixels_-_General/pixel%20(253).gif">neskaya (via web archive)</a></li>
           <li>various tiny pixel icons found on <a href="https://www.asterism-m.com/item/">asterism</a> and <a href="https://foollovers.com/index.html">foollovers</a></li>
+          <li>FFXIV Free Trial ads created by <a href="https://bootlegdomain.neocities.org/home">bootlegdomain</a> (yes I picked jobs to match my ocs) (what about it)</li>
         </ul>
       </div>
 
