--- a/public/index.html
+++ b/public/index.html
@@ -66,10 +66,19 @@
           Every week (or more likely, when I remember to) I share something that I like or I'm currently into. Pretty much anything goes!
         </p>
         <br>  
-        <strong>Week of June 29, 2025 (posted 7/3)</strong>
-          <iframe width="380" height="315" src="https://www.youtube-nocookie.com/embed/0iVlSNpq8i8?si=XQkb77f1g8tesI_W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <strong>Week of July 13, 2025 (posted 7/16)</strong>
+          <a href="https://murdle.com/index.html" target="_blank"><img src="https://murdle.com/murdle-ranger-mustache.png" alt="Murdle" width="380"></a>
         <p>
-          I caught the live premiere completely by accident and haven't taken it off repeat since. Eternally grateful to my boyfriend for recently turning me on to Jamie's songs, I really love how she tunes Teto!
+          A friend recently introduced me to <a href="https://murdle.com/index.html" target="_blank">Murdle</a>, a daily puzzle solving game in the style of others like <a href="https://www.nytimes.com/games/wordle/index.html" target="_blank">Wordle</a> and <a href="https://globle-game.com/game" target="_blank">Globle</a> and <a href="https://costcodle.com/" target="_blank">Costcodle</a>. I'm a big puzzle guy so I added it into my daily rotation immediately lol
+        </p>
+        <p>
+          The game itself is about logical process of elimination - first you go through each clue and use the grid to mark down the facts, then use your deduction skills to fill in the rest of the squares based on what you know is true/false and figure out whodunit. Some days the puzzle will have more categories to keep track of, like motives and suspect statements, while other days will just be the who-what-where wombo combo.
+        </p>
+        <p>
+          It's pretty straightforward but it just really scratches the puzzle itch for me, to the point that I bought a couple of the physical books and I've been chewing through them every night. The four category puzzles drive me nuts in the most fun way possible.
+        </p>
+        <p>
+          If you're someone who likes stretching your brain a bit every day (and honestly even if you aren't!), I heartily recommend giving it a try :]
         </p>
       </div>
 
@@ -82,7 +91,7 @@
           <p><i>Neighbors</i></p>
           None yet!
           <br><br>
-          <p><i>Sites I like</i></p>
+          <p><i>Sites I like & admire</i></p>
           <a href="https://starry-knight.neocities.org/" target="_blank"><img src="https://starryknight06.github.io/neocities/public/images/button-starrys-grove.png" alt="Starry's Grove"></a> 
           <a href="https://petrapixel.neocities.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/petracoding/petrapixel.neocities.org@latest/public/assets/img/linkback.gif" alt="petrapixel"></a> 
           <a href="https://aroceu.com/" target="_blank"><img src="/graphics/buttons/aroceu.png" alt="aroceu" height="31px" width="88px"></a>
@@ -96,7 +105,8 @@
       <div id="contentbox" style="max-height: 150px; overflow-y: scroll;">
         <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> changelog</div>
         <p>
-          <strong>3 July 2025:</strong> jim she's alive (first deployment!)
+          <strong>16 July 2025:</strong> added some <a href="https://bootlegdomain.neocities.org/home" target="_blank">goofy ads</a> for world famous MMORPG Final Fantasy XIV, updated about page with a link to my new Anilist account
+          <br><strong>3 July 2025:</strong> jim she's alive (first deployment!)
         </p>
       </div>
     </div>
