--- a/public/totw-archive/index.html
+++ b/public/totw-archive/index.html
@@ -48,8 +48,18 @@
     <div id="content">
       <div id="contentbox">
         <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> archive of things of the week</div>
-        Wanna see previous things of the week? You're in the right place! (...But there aren't any yet!)
+        Wanna see some previous things of the week? You're in the right place!
       </div>
+
+      <div id="contentbox">
+        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> Week of June 29, 2025 (posted 7/3)</div>
+        <iframe width="380" height="315" src="https://www.youtube-nocookie.com/embed/0iVlSNpq8i8?si=XQkb77f1g8tesI_W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p>
+          I caught the live premiere completely by accident and haven't taken it off repeat since. Eternally grateful to my boyfriend for recently turning me on to Jamie's songs, I really love how she tunes Teto!
+        </p>
+      </div>
+
+
     </div>
 
 
