First journal post (hi, I'm not dead!)

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -108,7 +108,7 @@
         <p><strong>manga:</strong> Witch Hat Atelier, Cardcaptor Sakura, Yotsuba!, Soul Eater, Hanamonogatari, No.6, Frieren</p>
         <p><strong>colors:</strong> purple and orange</p>
         <p><strong>time of day:</strong> 5:45pm</p>
-        <p><strong>stationery:</strong> Sarasa 0.5mm gel pens, Takeda Jimuki Kyo-Iro inks (Soft Snow of Ohara), Bande washi tape sticker rolls, Tombow Mono adhesive tape runner</p>
+        <p><strong>stationery:</strong> Sarasa 0.5mm gel pens, Takeda Jimuki Kyo-Iro inks (<i>Soft Snow of Ohara</i> in particular), Bande washi tape sticker rolls, Tombow Mono adhesive tape runner</p>
         <p><strong>sounds:</strong> my cat's meows, windchimes, Bangboo ehn-nas, PS2 start-up sound, shuffling cards, afternoon rainshowers, pikmin when you pluck them</p>
       </div>
 
