--- a/public/index.html
+++ b/public/index.html
@@ -66,19 +66,10 @@
           Every week (or more likely, when I remember to) I share something that I like or I'm currently into. Pretty much anything goes!
         </p>
         <br>  
-        <strong>Week of July 13, 2025 (posted 7/16)</strong>
-          <a href="https://murdle.com/index.html" target="_blank"><img src="https://murdle.com/murdle-ranger-mustache.png" alt="Murdle" width="380"></a>
+        <strong>Week of August 31, 2025 (posted 9/5)</strong>
+        <img src="/graphics/sunnyD.jpeg" alt="A 1 gallon container of Sunny D, smooth orange flavor" width="380">
         <p>
-          A friend recently introduced me to <a href="https://murdle.com/index.html" target="_blank">Murdle</a>, a daily puzzle solving game in the style of others like <a href="https://www.nytimes.com/games/wordle/index.html" target="_blank">Wordle</a> and <a href="https://globle-game.com/game" target="_blank">Globle</a> and <a href="https://costcodle.com/" target="_blank">Costcodle</a>. I'm a big puzzle guy so I added it into my daily rotation immediately lol
-        </p>
-        <p>
-          The game itself is about logical process of elimination - first you go through each clue and use the grid to mark down the facts, then use your deduction skills to fill in the rest of the squares based on what you know is true/false and figure out whodunit. Some days the puzzle will have more categories to keep track of, like motives and suspect statements, while other days will just be the who-what-where wombo combo.
-        </p>
-        <p>
-          It's pretty straightforward but it just really scratches the puzzle itch for me, to the point that I bought a couple of the physical books and I've been chewing through them every night. The four category puzzles drive me nuts in the most fun way possible.
-        </p>
-        <p>
-          If you're someone who likes stretching your brain a bit every day (and honestly even if you aren't!), I heartily recommend giving it a try :]
+          Been on a real Sunny D kick recently, I'm actually drinking a glass as we speak. I have no idea why? The last time I had any was proooooobably in high school, but I saw a big ol jug at Winco last week and it spoke to something deep in my soul so I stuck it in the cart. Smooth Orange is supreme obviously (I'll confess I was a Tangy Original truther as a tot but I think it's too acidic for me now. I'm so susceptible to heartburn. God. I need to buy more Tums.)
         </p>
       </div>
 
@@ -96,7 +87,7 @@
           <a href="https://petrapixel.neocities.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/petracoding/petrapixel.neocities.org@latest/public/assets/img/linkback.gif" alt="petrapixel"></a> 
           <a href="https://aroceu.com/" target="_blank"><img src="/graphics/buttons/aroceu.png" alt="aroceu" height="31px" width="88px"></a>
           <a href="https://nonkiru.art/" target="_blank"><img src="/graphics/buttons/nonkiru.gif" alt="nonkiru.art"></a>
-          <a href="lorekeeping.neocities.org" target="_blank"><img src="https://lorekeeping.neocities.org/button.png" alt="lorekeeping"></a>
+          <a href="https://lorekeeping.neocities.org" target="_blank"><img src="https://lorekeeping.neocities.org/button.png" alt="lorekeeping"></a>
           <a href="https://lostletters.neocities.org/" target="_blank"><img src="/graphics/buttons/lostletters.gif" alt="lostletters"></a>
           <a href="https://mariteaux.somnolescent.net/" target="_blank"><img src="/graphics/buttons/mariteaux.png" alt="mariteaux"></a>
         </center>
@@ -105,7 +96,8 @@
       <div id="contentbox" style="max-height: 150px; overflow-y: scroll;">
         <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> changelog</div>
         <p>
-          <strong>16 July 2025:</strong> added some <a href="https://bootlegdomain.neocities.org/home" target="_blank">goofy ads</a> for world famous MMORPG Final Fantasy XIV, updated about page with a link to my new Anilist account
+          <strong>5 September 2025:</strong> first journal post (hi, I'm not dead!)
+          <br><strong>16 July 2025:</strong> added some <a href="https://bootlegdomain.neocities.org/home" target="_blank">goofy ads</a> for world famous MMORPG Final Fantasy XIV, updated about page with a link to my new Anilist account
           <br><strong>3 July 2025:</strong> jim she's alive (first deployment!)
         </p>
       </div>
