--- a/public/totw-archive/index.html
+++ b/public/totw-archive/index.html
@@ -59,6 +59,23 @@
         </p>
       </div>
 
+      <div id="contentbox">
+        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> Week of July 13, 2025 (posted 7/16)</div>
+        <a href="https://murdle.com/index.html" target="_blank"><img src="https://murdle.com/murdle-ranger-mustache.png" alt="Murdle" width="380"></a>
+        <p>
+          A friend recently introduced me to <a href="https://murdle.com/index.html" target="_blank">Murdle</a>, a daily puzzle solving game in the style of others like <a href="https://www.nytimes.com/games/wordle/index.html" target="_blank">Wordle</a> and <a href="https://globle-game.com/game" target="_blank">Globle</a> and <a href="https://costcodle.com/" target="_blank">Costcodle</a>. I'm a big puzzle guy so I added it into my daily rotation immediately lol
+        </p>
+        <p>
+          The game itself is about logical process of elimination - first you go through each clue and use the grid to mark down the facts, then use your deduction skills to fill in the rest of the squares based on what you know is true/false and figure out whodunit. Some days the puzzle will have more categories to keep track of, like motives and suspect statements, while other days will just be the who-what-where wombo combo.
+        </p>
+        <p>
+          It's pretty straightforward but it just really scratches the puzzle itch for me, to the point that I bought a couple of the physical books and I've been chewing through them every night. The four category puzzles drive me nuts in the most fun way possible.
+        </p>
+        <p>
+          If you're someone who likes stretching your brain a bit every day (and honestly even if you aren't!), I heartily recommend giving it a try :]
+        </p>
+      </div>
+
 
     </div>
 
@@ -69,6 +86,10 @@
         <div id="statusbox"></div>
       </div>
 
+      <div id="rightbox">
+        <div id="counterbox">
+        </div>
+      </div>      
 
       <div id="rightbox">
         <div id="webringsbox"></div>
@@ -99,6 +120,7 @@
   <script src="/scripts/tagsScript.js"></script>
   <script src="/scripts/headerfooter.js"></script>
   <script src="/scripts/sidebars.js"></script>
+  <script src="/scripts/widgets.js"></script>
   <script src="https://status.cafe/current-status.js?name=luna" defer></script>
 </body>
 
