An RSS feed is born!
Established an RSS feed for my site (hopefully... stay tuned for any hotfixes lol) and made some updates to the credits page.

--- a/public/journal/index.html
+++ b/public/journal/index.html
@@ -4,6 +4,7 @@
   <title>blooming on the moon</title>
   <link rel="icon" href="/graphics/favicon.gif" type="image/x-icon" />
   <link rel="stylesheet" href="/styles/main-style.css" type="text/css">
+  <link rel="alternate" type="application/rss+xml" href="/rss.xml" title="RSS">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
