--- a/public/index.html
+++ b/public/index.html
@@ -67,11 +67,15 @@
           Every week (or more likely, when I remember to) I share something that I like or I'm currently into. Pretty much anything goes!
         </p>
         <br>  
-        <strong>Week of August 31, 2025 (posted 9/5)</strong>
-        <img src="/graphics/sunnyD.jpeg" alt="A 1 gallon container of Sunny D, smooth orange flavor" width="380">
+        <strong>Week of September 21, 2025 (posted 9/25)</strong>
+        <img src="/graphics/totw/sosgb_logo.png" alt="The logo for Story of Seasons: Grand Bazaar" width="380">
         <p>
-          Been on a real Sunny D kick recently, I'm actually drinking a glass as we speak. I have no idea why? The last time I had any was proooooobably in high school, but I saw a big ol jug at Winco last week and it spoke to something deep in my soul so I stuck it in the cart. Smooth Orange is supreme obviously (I'll confess I was a Tangy Original truther as a tot but I think it's too acidic for me now. I'm so susceptible to heartburn. God. I need to buy more Tums.)
+          Back on my farm game shit again lads (no one was surprised)<br><br>
+          I never played the original DS version of GB so I went into it basically blind and I'm having a blast!! My save file is already over 40 hours and I'm not even halfway through year 1 autumn yet, which is wild to me? There's soooo much to do. I wasn't sure if I'd like the bazaar replacing the traditional shipping bin, but I'm slowly figuring out how to put the windmills to good use every week. Balancing between making stuff for the bazaar and more long-term crafting like seed making and building materials is fun, and I <i>really</i> like that the seasonal trends encourage you to focus on more than just growing crops with the best gold-per-day return every month - it's a very refreshing twist on the usual formula, and I think it'll make playing long-term much more enjoyable. Though on the other hand, it kinda sucks to get a bad combo of trends for a season lol<br><br>
+          Going in blind included not knowing anything about everyone in town. Usually I don't mind reading or watching stuff about characters beforehand in a farm sim (it's part of the fun of anticipating a new game imo), but I felt like trying something new this time. I was curious how I'd like getting to know the townspeople organically - so far, very glad I gave it a shot! I've been pleasantly surprised several times in heart events as I get closer to everyone. The voice acting is incredibly well done too. I adore every performance but Mayor Felix is my favorite, you can tell he's having a great time in the booth :]<br><br>
+          I could keep yapping for ages and I want to, so look forward to a journal entry at some point in the future when I'm farther into the game. In the meantime, look at my cat. She's so long.
         </p>
+        <img src="/graphics/totw/sosgb_longcat.jpg" alt="My farmer holding their pet cat under her front arms, with the rest of her body stretched out very long" width="380">
       </div>
 
       <div id="contentbox">
@@ -88,7 +92,7 @@
           <a href="https://petrapixel.neocities.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/petracoding/petrapixel.neocities.org@latest/public/assets/img/linkback.gif" alt="petrapixel"></a> 
           <a href="https://aroceu.com/" target="_blank"><img src="/graphics/buttons/aroceu.png" alt="aroceu" height="31px" width="88px"></a>
           <a href="https://nonkiru.art/" target="_blank"><img src="/graphics/buttons/nonkiru.gif" alt="nonkiru.art"></a>
-          <a href="https://lorekeeping.neocities.org" target="_blank"><img src="https://lorekeeping.neocities.org/button.png" alt="lorekeeping"></a>
+          <a href="https://deoxys.nekoweb.org/" target="_blank"><img src="https://deoxys.nekoweb.org/assets/button.png" alt="deoxys"></a>
           <a href="https://lostletters.neocities.org/" target="_blank"><img src="/graphics/buttons/lostletters.gif" alt="lostletters"></a>
           <a href="https://mariteaux.somnolescent.net/" target="_blank"><img src="/graphics/buttons/mariteaux.png" alt="mariteaux"></a>
         </center>
@@ -97,7 +101,9 @@
       <div id="contentbox" style="max-height: 150px; overflow-y: scroll;">
         <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> changelog</div>
         <p>
-          <strong>5 September 2025:</strong> first journal post (hi, I'm not dead!)
+          <strong>25 September 2025:</strong> new TOTW, reorganized the archive to be in reverse chronological order (newest to oldest). a few housekeeping things too
+          <br><strong>11 September 2025:</strong> an RSS feed is born! subscribe from the sidebar!
+          <br><strong>5 September 2025:</strong> first journal post (hi, I'm not dead!)
           <br><strong>16 July 2025:</strong> added some <a href="https://bootlegdomain.neocities.org/home" target="_blank">goofy ads</a> for world famous MMORPG Final Fantasy XIV, updated about page with a link to my new Anilist account
           <br><strong>3 July 2025:</strong> jim she's alive (first deployment!)
         </p>
