--- a/public/totw-archive/index.html
+++ b/public/totw-archive/index.html
@@ -53,10 +53,10 @@
       </div>
 
       <div id="contentbox">
-        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> Week of June 29, 2025 (posted 7/3)</div>
-        <iframe width="380" height="315" src="https://www.youtube-nocookie.com/embed/0iVlSNpq8i8?si=XQkb77f1g8tesI_W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> Week of August 31, 2025 (posted 9/5)</div>
+        <img src="/graphics/totw/sunnyD.jpeg" alt="A 1 gallon container of Sunny D, smooth orange flavor" width="380">
         <p>
-          I caught the live premiere completely by accident and haven't taken it off repeat since. Eternally grateful to my boyfriend for recently turning me on to Jamie's songs, I really love how she tunes Teto!
+          Been on a real Sunny D kick recently, I'm actually drinking a glass as we speak. I have no idea why? The last time I had any was proooooobably in high school, but I saw a big ol jug at Winco last week and it spoke to something deep in my soul so I stuck it in the cart. Smooth Orange is supreme obviously (I'll confess I was a Tangy Original truther as a tot but I think it's too acidic for me now. I'm so susceptible to heartburn. God. I need to buy more Tums.)
         </p>
       </div>
 
@@ -77,7 +77,13 @@
         </p>
       </div>
 
-
+      <div id="contentbox">
+        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> Week of June 29, 2025 (posted 7/3)</div>
+        <iframe width="380" height="315" src="https://www.youtube-nocookie.com/embed/0iVlSNpq8i8?si=XQkb77f1g8tesI_W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p>
+          I caught the live premiere completely by accident and haven't taken it off repeat since. Eternally grateful to my boyfriend for recently turning me on to Jamie's songs, I really love how she tunes Teto!
+        </p>
+      </div>
     </div>
 
 
