--- a/public/totw-archive/index.html
+++ b/public/totw-archive/index.html
@@ -53,6 +53,18 @@
       </div>
 
       <div id="contentbox">
+        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> Week of September 21, 2025 (posted 9/25)</div>
+        <img src="/graphics/totw/sosgb_logo.png" alt="The logo for Story of Seasons: Grand Bazaar" width="380">
+        <p>
+          Back on my farm game shit again lads (no one was surprised)<br><br>
+          I never played the original DS version of GB so I went into it basically blind and I'm having a blast!! My save file is already over 40 hours and I'm not even halfway through year 1 autumn yet, which is wild to me? There's soooo much to do. I wasn't sure if I'd like the bazaar replacing the traditional shipping bin, but I'm slowly figuring out how to put the windmills to good use every week. Balancing between making stuff for the bazaar and more long-term crafting like seed making and building materials is fun, and I <i>really</i> like that the seasonal trends encourage you to focus on more than just growing crops with the best gold-per-day return every month - it's a very refreshing twist on the usual formula, and I think it'll make playing long-term much more enjoyable. Though on the other hand, it kinda sucks to get a bad combo of trends for a season lol<br><br>
+          Going in blind included not knowing anything about everyone in town. Usually I don't mind reading or watching stuff about characters beforehand in a farm sim (it's part of the fun of anticipating a new game imo), but I felt like trying something new this time. I was curious how I'd like getting to know the townspeople organically - so far, very glad I gave it a shot! I've been pleasantly surprised several times in heart events as I get closer to everyone. The voice acting is incredibly well done too. I adore every performance but Mayor Felix is my favorite, you can tell he's having a great time in the booth :]<br><br>
+          I could keep yapping for ages and I want to, so look forward to a journal entry at some point in the future when I'm farther into the game. In the meantime, look at my cat. She's so long.
+        </p>
+        <img src="/graphics/totw/sosgb_longcat.jpg" alt="My farmer holding their pet cat under her front arms, with the rest of her body stretched out very long" width="380">
+      </div>
+
+      <div id="contentbox">
         <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> Week of August 31, 2025 (posted 9/5)</div>
         <img src="/graphics/totw/sunnyD.jpeg" alt="A 1 gallon container of Sunny D, smooth orange flavor" width="380">
         <p>
