10/16: New journal entry + TOTW

--- a/public/index.html
+++ b/public/index.html
@@ -67,10 +67,10 @@
           Every week (or more likely, when I remember to) I share something that I like or I'm currently into. Pretty much anything goes!
         </p>
         <br>  
-        <strong>Week of October 5, 2025 (posted 10/9)</strong>
-        <img src="/graphics/totw/pleh.jpg" alt="A picture of a grey bunny flopped over on its side captioned 'so tired.... pleh....'" width="380">
+        <strong>Week of October 12, 2025 (posted 10/16)</strong>
+        <iframe width="380" height="315" src="https://www.youtube-nocookie.com/embed/Xx1TnVObQ0k?si=dl68StSQt91Wkuho" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p>
-          Filed under images that have done inexplicable and irreparable damage to my lexicon. I can't stop saying it... pleh....
+          Really good song, really good Miku design. PinocchioP never misses I fear... my kingdom for a <a href="https://www.karasu.utau.us/" target="_blank">Karasu</a> cover (please) (can anyone hear me) (floating away)
         </p>
       </div>
 
@@ -97,7 +97,8 @@
       <div id="contentbox" style="max-height: 150px; overflow-y: scroll;">
         <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> changelog</div>
         <p>
-          <strong>9 October 2025:</strong> new TOTW! working on several bigger things behind the scenes, life got busy for a bit so I have nothing to show yet but they're coming
+          <strong>16 October 2025:</strong> New journal entry yapping about library books + new TOTW
+          <br><strong>9 October 2025:</strong> new TOTW! working on several bigger things behind the scenes, life got busy for a bit so I have nothing to show yet but they're coming
           <br><strong>25 September 2025:</strong> new TOTW, reorganized the archive to be in reverse chronological order (newest to oldest). a few housekeeping things too
           <br><strong>11 September 2025:</strong> an RSS feed is born! subscribe from the sidebar!
           <br><strong>5 September 2025:</strong> first journal post (hi, I'm not dead!)
