--- a/public/totw-archive/index.html
+++ b/public/totw-archive/index.html
@@ -52,6 +52,15 @@
         Wanna see some previous things of the week? You're in the right place!
       </div>
 
+
+      <div id="contentbox">
+        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> Week of October 5, 2025 (posted 10/9)</div>
+        <img src="/graphics/totw/pleh.jpg" alt="A picture of a grey bunny flopped over on its side captioned 'so tired.... pleh....'" width="380">
+        <p>
+          Filed under images that have done inexplicable and irreparable damage to my lexicon. I can't stop saying it... pleh....
+        </p>
+      </div>
+
       <div id="contentbox">
         <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> Week of September 21, 2025 (posted 9/25)</div>
         <img src="/graphics/totw/sosgb_logo.png" alt="The logo for Story of Seasons: Grand Bazaar" width="380">
