11/23: New TOTW and new neighbors

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,13 @@
 
     <div id="content">
       <div id="contentbox">
+        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> pardon the dust!</div>
+        <p>
+          Apologies for the recent quiet - I'm in the (very slow) process of giving lunarlily a redesign from the ground up. I don't have as much free time to put toward coding as I'd like after work these days, but it's still coming along well enough. This is my main focus for right now, so expect other site updates to be somewhat infrequent for a while longer!
+        </p>
+      </div>
+
+      <div id="contentbox">
         <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> welcome!</div>
         <p>
           Thank you for stopping by! I'm glad you're here, and I hope you enjoy your stay :]
@@ -67,21 +74,20 @@
           Every week (or more likely, when I remember to) I share something that I like or I'm currently into. Pretty much anything goes!
         </p>
         <br>  
-        <strong>Week of October 12, 2025 (posted 10/16)</strong>
-        <iframe width="380" height="315" src="https://www.youtube-nocookie.com/embed/Xx1TnVObQ0k?si=dl68StSQt91Wkuho" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <p>
-          Really good song, really good Miku design. PinocchioP never misses I fear... my kingdom for a <a href="https://www.karasu.utau.us/" target="_blank">Karasu</a> cover (please) (can anyone hear me) (floating away)
-        </p>
+        <strong>Week of November 23, 2025 (posted 11/23)</strong>
+        <a href="https://shadolith.bandcamp.com/album/do-no-harm" target="_blank"><img src="/graphics/totw/donoharm.jpg" alt="The cover art for the album Do No Harm" width="380"></a>
+        I'll be honest, I haven't actually watched <a href="https://www.youtube.com/playlist?list=PL-QgmqAlQTgyitDyzrvySyHNCHw8_bJub" target="_blank">Snapcube's KH fandub</a> yet but these are bangers even outside of their original context. I think I'm ever so slightly partial to the ventricular mix.
       </div>
 
       <div id="contentbox">
         <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> nearby places of interest</div>
         <center>
           <p><i>Friends<br>(manifesting everyone making webbed sites... please...)</i></p>
-          <a href="https://nightmarefish.neocities.org/"><img src="/graphics/buttons/nightmarefish.png" alt="nightmarefish"></a>
+          <a href="https://nightmarefish.neocities.org/" target="_blank"><img src="/graphics/buttons/nightmarefish.png" alt="nightmarefish"></a>
           <br><br>
           <p><i>Neighbors</i></p>
-          None yet!
+          <a href="https://zhongvie.neocities.org/" target="_blank"><img src="/graphics/buttons/zhongvie.gif" alt="zhongvie"></a>
+          <a href="https://yarnfish.neocities.org/" target="_blank"><img src="/graphics/buttons/yarnfish.gif" alt="yarnfish"></a>
           <br><br>
           <p><i>Sites I like & admire</i></p>
           <a href="https://starry-knight.neocities.org/" target="_blank"><img src="https://starryknight06.github.io/neocities/public/images/button-starrys-grove.png" alt="Starry's Grove"></a> 
@@ -97,7 +103,8 @@
       <div id="contentbox" style="max-height: 150px; overflow-y: scroll;">
         <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> changelog</div>
         <p>
-          <strong>16 October 2025:</strong> New journal entry yapping about library books + new TOTW
+          <strong>23 November 2025:</strong> New TOTW, the exciting (and very belated!) first addition to the Neighbors section, and a little notice about ongoing site construction
+          <br><strong>16 October 2025:</strong> New journal entry yapping about library books + new TOTW
           <br><strong>9 October 2025:</strong> new TOTW! working on several bigger things behind the scenes, life got busy for a bit so I have nothing to show yet but they're coming
           <br><strong>25 September 2025:</strong> new TOTW, reorganized the archive to be in reverse chronological order (newest to oldest). a few housekeeping things too
           <br><strong>11 September 2025:</strong> an RSS feed is born! subscribe from the sidebar!
