--- a/public/totw-archive/index.html
+++ b/public/totw-archive/index.html
@@ -52,6 +52,13 @@
         Wanna see some previous things of the week? You're in the right place!
       </div>
 
+      <div id="contentbox">
+        <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> Week of October 12, 2025 (posted 10/16)</div>
+        <iframe width="380" height="315" src="https://www.youtube-nocookie.com/embed/Xx1TnVObQ0k?si=dl68StSQt91Wkuho" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p>
+          Really good song, really good Miku design. PinocchioP never misses I fear... my kingdom for a <a href="https://www.karasu.utau.us/" target="_blank">Karasu</a> cover (please) (can anyone hear me) (floating away)
+        </p>
+      </div>
 
       <div id="contentbox">
         <div class="big-title"><img src="/graphics/yflower.png" alt="x" style="margin-left:3px; margin-bottom:1px;"> Week of October 5, 2025 (posted 10/9)</div>
